--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
     "version": 2,
-    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/src/app.js" }
+    "builds": [
+      { "src": "src/app.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "src/app.js" }
     ]
   }
   
