--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
-{
+
+  {
     "version": 2,
-    "builds": [
-      { "src": "src/app.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "src/app.js" }
-    ]
+    "builds": [{ "src": "src/app.js", "use": "@vercel/node" }],
+    "routes": [{ "src": "/(.*)", "dest": "src/app.js" }],
+    "functions": { "src/app.js": { "maxDuration": 30 } }
   }
   
