--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,6 @@
   {
     "version": 2,
     "builds": [{ "src": "src/app.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "src/app.js" }],
-    "functions": { "src/app.js": { "maxDuration": 30 } }
+    "routes": [{ "src": "/(.*)", "dest": "src/app.js" }]
   }
   
